# restapi-flask

./: Makefile  pyproject.toml
app/: main.py
