[tool.poetry]
name = "restapi-flask"
version = "0.1.0"
description = ""
authors = ["jhonatta <jhonattasantoss@outlook.com>"]
readme = "README.md"
packages = [
    {include = "app"}
]

[tool.poetry.dependencies]
python = ">=3.13"
flask = ">=3.1.0,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
